@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2013 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,18 +34,18 @@ import org.springframework.util.StringUtils;
 import org.springframework.util.xml.DomUtils;
 
 /**
- * BeanDefinitionParser implementation for the '{@code &lt;lang:groovy/&gt;}',
- * '{@code &lt;lang:jruby/&gt;}' and '{@code &lt;lang:bsh/&gt;}' tags.
+ * BeanDefinitionParser implementation for the '{@code <lang:groovy/>}',
+ * '{@code <lang:std/>}' and '{@code <lang:bsh/>}' tags.
  * Allows for objects written using dynamic languages to be easily exposed with
  * the {@link org.springframework.beans.factory.BeanFactory}.
  *
- * <p>The script for each object can be specified either as a reference to the Resource
- * containing it (using the '{@code script-source}' attribute) or inline in the XML configuration
- * itself (using the '{@code inline-script}' attribute.
+ * <p>The script for each object can be specified either as a reference to the
+ * resource containing it (using the '{@code script-source}' attribute) or inline
+ * in the XML configuration itself (using the '{@code inline-script}' attribute.
  *
- * <p>By default, dynamic objects created with these tags are <strong>not</strong> refreshable.
- * To enable refreshing, specify the refresh check delay for each object (in milliseconds) using the
- * '{@code refresh-check-delay}' attribute.
+ * <p>By default, dynamic objects created with these tags are <strong>not</strong>
+ * refreshable. To enable refreshing, specify the refresh check delay for each
+ * object (in milliseconds) using the '{@code refresh-check-delay}' attribute.
  *
  * @author Rob Harrop
  * @author Rod Johnson
@@ -55,6 +55,8 @@ import org.springframework.util.xml.DomUtils;
  */
 class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 
+	private static final String ENGINE_ATTRIBUTE = "engine";
+
 	private static final String SCRIPT_SOURCE_ATTRIBUTE = "script-source";
 
 	private static final String INLINE_SCRIPT_ELEMENT = "inline-script";
@@ -62,8 +64,6 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 	private static final String SCOPE_ATTRIBUTE = "scope";
 
 	private static final String AUTOWIRE_ATTRIBUTE = "autowire";
-
-	private static final String DEPENDENCY_CHECK_ATTRIBUTE = "dependency-check";
 
 	private static final String DEPENDS_ON_ATTRIBUTE = "depends-on";
 
@@ -104,6 +104,9 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 	@Override
 	@SuppressWarnings("deprecation")
 	protected AbstractBeanDefinition parseInternal(Element element, ParserContext parserContext) {
+		// Engine attribute only supported for <lang:std>
+		String engine = element.getAttribute(ENGINE_ATTRIBUTE);
+
 		// Resolve the script source.
 		String value = resolveScriptSource(element, parserContext.getReaderContext());
 		if (value == null) {
@@ -137,10 +140,6 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 		}
 		bd.setAutowireMode(autowireMode);
 
-		// Determine dependency check setting.
-		String dependencyCheck = element.getAttribute(DEPENDENCY_CHECK_ATTRIBUTE);
-		bd.setDependencyCheck(parserContext.getDelegate().getDependencyCheck(dependencyCheck));
-
 		// Parse depends-on list of bean names.
 		String dependsOn = element.getAttribute(DEPENDS_ON_ATTRIBUTE);
 		if (StringUtils.hasLength(dependsOn)) {
@@ -160,8 +159,8 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 			bd.setInitMethodName(beanDefinitionDefaults.getInitMethodName());
 		}
 
-		String destroyMethod = element.getAttribute(DESTROY_METHOD_ATTRIBUTE);
-		if (StringUtils.hasLength(destroyMethod)) {
+		if (element.hasAttribute(DESTROY_METHOD_ATTRIBUTE)) {
+			String destroyMethod = element.getAttribute(DESTROY_METHOD_ATTRIBUTE);
 			bd.setDestroyMethodName(destroyMethod);
 		}
 		else if (beanDefinitionDefaults.getDestroyMethodName() != null) {
@@ -171,22 +170,25 @@ class ScriptBeanDefinitionParser extends AbstractBeanDefinitionParser {
 		// Attach any refresh metadata.
 		String refreshCheckDelay = element.getAttribute(REFRESH_CHECK_DELAY_ATTRIBUTE);
 		if (StringUtils.hasText(refreshCheckDelay)) {
-			bd.setAttribute(ScriptFactoryPostProcessor.REFRESH_CHECK_DELAY_ATTRIBUTE, new Long(refreshCheckDelay));
+			bd.setAttribute(ScriptFactoryPostProcessor.REFRESH_CHECK_DELAY_ATTRIBUTE, Long.valueOf(refreshCheckDelay));
 		}
 
 		// Attach any proxy target class metadata.
 		String proxyTargetClass = element.getAttribute(PROXY_TARGET_CLASS_ATTRIBUTE);
 		if (StringUtils.hasText(proxyTargetClass)) {
-			Boolean flag = new Boolean(proxyTargetClass);
-			bd.setAttribute(ScriptFactoryPostProcessor.PROXY_TARGET_CLASS_ATTRIBUTE, flag);
+			bd.setAttribute(ScriptFactoryPostProcessor.PROXY_TARGET_CLASS_ATTRIBUTE, Boolean.valueOf(proxyTargetClass));
 		}
 
 		// Add constructor arguments.
 		ConstructorArgumentValues cav = bd.getConstructorArgumentValues();
 		int constructorArgNum = 0;
+		if (StringUtils.hasLength(engine)) {
+			cav.addIndexedArgumentValue(constructorArgNum++, engine);
+		}
 		cav.addIndexedArgumentValue(constructorArgNum++, value);
 		if (element.hasAttribute(SCRIPT_INTERFACES_ATTRIBUTE)) {
-			cav.addIndexedArgumentValue(constructorArgNum++, element.getAttribute(SCRIPT_INTERFACES_ATTRIBUTE));
+			cav.addIndexedArgumentValue(
+					constructorArgNum++, element.getAttribute(SCRIPT_INTERFACES_ATTRIBUTE), "java.lang.Class[]");
 		}
 
 		// This is used for Groovy. It's a bean reference to a customizer bean.
